<resources>
    <string name="app_name">ArTV</string>
    <string name="device_id">Device ID</string>
    <string name="master_device_ip">Master Device IP \n(Blank if Master Device)</string>
    <string name="user">USER</string>
    <string name="password">PASSWORD</string>
    <string name="save">SAVE</string>
    <string name="error_player">There was an error initializing the YouTubePlayer (%1$s)</string>
    <string name="hint_device_id">device id</string>
    <string name="hint_master_ip">master ip</string>
    <string name="hint_server_address">address</string>
    <string name="hint_user_name">user name</string>
    <string name="hint_password">password</string>
    <string name="admin_root">Continue ot exit?</string>
    <string name="admin_retry">Retry</string>
    <string name="app_exit">Exit</string>
    <string name="show_debug_info">Show Debug Information</string>
</resources>
